--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "grapesjs": "^0.20.1",
+    "grapesjs-blocks-basic": "^1.0.1",
+    "grapesjs-mjml": "^1.0.2",
+    "grapesjs-plugin-export": "^1.0.11",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
